[package]
name = "noether-bridge"
version = "0.1.0"
edition = "2021"
description = "Formal bridge from symplectic-fleet Noether pairs to conservation-law γ + H = C meta-law"
license = "MIT"
repository = "https://github.com/SuperInstance/noether-bridge"
keywords = ["noether", "symplectic", "conservation", "physics", "meta-law"]
categories = ["science", "mathematics"]

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
